Asynchronous Task Processing Done

--- a/myapp/templates/myapp/result.html
+++ b/myapp/templates/myapp/result.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Result</title>
 </head>
 <body>
 
@@ -16,12 +16,15 @@
         </ul>
     </nav>
 
-    <h1> Home Page </h1>
+    <h1> Result Page </h1>
     <hr>
-    {% if result.id%}
-    <p> Task ID: {{result.id}} </p>
-    <a href="{% url 'check_result' result.id %}">Check Task</a>
-
+    {% if result %} 
+    <h5> Task ID: {{result.id}} </h5>
+    <h5> Task ID: {{result.task_id}} </h5>
+    <h5> Task State: {{result.state}} </h5>
+    <h5> Task Status: {{result.status}} </h5>
+    <h5> Task Value: {{result.result}} </h5>
+    
     {% endif %}
     <footer>
         <p>&copy; 2024 Your Name. All rights reserved.</p>
